Backend Challengue tipo de cambio Componente Front para el consumo de las Apis Rest del componente spring-boot-tipocambio Mizraim Cortez Cruz

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,10 +10,10 @@
                 <a class="nav-link" href="#">Listar <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/directivas">Listar por Código</a>
+                <a class="nav-link" routerLink="/tipocambio">Listar Todos</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/clientes">Grabar</a>
+                <a class="nav-link" routerLink="/directivas">Grabar</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Exchange</a>
