--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<app-tipocambio></app-tipocambio>
+
+<div class="container my-3">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
