Backend Challengue tipo de cambio Componente Front para el consumo de las Apis Rest del componente spring-boot-tipocambio Mizraim Cortez Cruz

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+    <!--
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -16,10 +16,10 @@
                 <a class="nav-link" routerLink="/directivas">Grabar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Exchange</a>
+                <a class="nav-link disabled" href="#">Exchange</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
           </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -38,4 +38,6 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
+-->
+
 </nav>
