--- a/src/app/tipocambio/form.component.html
+++ b/src/app/tipocambio/form.component.html
@@ -39,7 +39,11 @@
                 </div>
             </div>
 
-
+            <div class="form-group row">
+                <div class="col-sm-6">
+                    <button class="btn btn-primary" role="button" (click)='actualizar()'>Actualizar</button>
+                </div>
+            </div>
 
         </form>
 
